--- a/vue-Myshop/index.html
+++ b/vue-Myshop/index.html
@@ -30,7 +30,7 @@
       <body>
         <nav class="hamburger">
           <div>
-            <img class="logo" src="img/logo.png" alt="logo" />
+            <img class="logo" src="svg/logo.svg" alt="logo" />
             <ul class="menu">
               <li class="nav_right"><a href="#">Home</a></li>
               <li class="nav_right"><a href="#">Shop</a></li>
@@ -39,12 +39,12 @@
             <div class="white">
               <img
                 class="whitecart"
-                src="img/whitecart.svg"
+                src="svg/whitecart.svg"
                 alt="cadie blanc"
               />
               <img
                 class="whitecross"
-                src="img/whitecross.svg"
+                src="svg/whitecross.svg"
                 alt="croix blanche"
               />
             </div>
@@ -52,7 +52,7 @@
         </nav>
         <nav class="navbar">
           <div class="div_header">
-            <img class="logo-without-anim" src="img/logo.png" alt="logo" />
+            <img class="logo-without-anim" src="svg/logo.svg" alt="logo" />
             <ul class="menu">
               <li id="without" class="nav_right"><a href="#">HOME</a></li>
               <li id="without" class="nav_right"><a href="#">SHOP</a></li>
@@ -60,13 +60,13 @@
             </ul>
           </div>
           <div class="nav_left">
-            <img class="cart" src="img/ion_cart-outline.png" alt="panier" />
-            <img class="barres" src="img/barres.svg" alt="barres" />
+            <img class="cart" src="svg/cart.svg" alt="panier" />
+            <img class="barres" src="svg/barres.svg" alt="barres" />
             <p id="without" class="login"><a href="#">LOGIN</a></p>
           </div>
         </nav>
         <nav class="navsearch">
-          <img class="search" src="img/iconSearch.svg" alt="loupe" />
+          <img class="search" src="svg/search.svg" alt="loupe" />
           <div class="searchbar">
             <div class="input-field">
               <input id="name" type="text" placeholder="Search..." required />
