page user and fisrt page login without register

--- a/vue-Myshop/index.html
+++ b/vue-Myshop/index.html
@@ -36,7 +36,7 @@
               <li class="nav_right"><a href="#">Shop</a></li>
               <li class="nav_right"><a href="#">Magazine</a></li>
             </ul>
-            <div class="white">
+            <!-- <div class="white">
               <img
                 class="whitecart"
                 src="svg/whitecart.svg"
@@ -47,7 +47,7 @@
                 src="svg/whitecross.svg"
                 alt="croix blanche"
               />
-            </div>
+            </div> -->
           </div>
         </nav>
         <nav class="navbar">
@@ -61,7 +61,7 @@
           </div>
           <div class="nav_left">
             <img class="cart" src="svg/cart.svg" alt="panier" />
-            <img class="barres" src="svg/barres.svg" alt="barres" />
+            <!-- <img class="barres" src="svg/barres.svg" alt="barres" /> -->
             <p id="without" class="login"><a href="#">LOGIN</a></p>
           </div>
         </nav>
